--- a/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
@@ -46,7 +46,6 @@ CONFIG_HSA_AMD=y
 CONFIG_I2C_DESIGNWARE_AMDPSP=y
 CONFIG_IRQ_REMAP=y
 CONFIG_KEYBOARD_GPIO=y
-CONFIG_MAILBOX=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_BUS_DEBUG=y
 CONFIG_MICROCODE_AMD=y
@@ -55,7 +54,6 @@ CONFIG_MMC_REALTEK_PCI=y
 CONFIG_MT7921E=m
 CONFIG_MXM_WMI=y
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
-CONFIG_PCC=y
 CONFIG_PHYLIB=y
 CONFIG_PINCTRL_AMD=y
 CONFIG_PROCESSOR_SELECT=y
@@ -96,4 +94,5 @@ CONFIG_TMPFS=y
 CONFIG_TOUCHSCREEN_RM_TS=y
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_X86_AMD_FREQ_SENSITIVITY=y
+CONFIG_X86_AMD_PSTATE=y
 # CONFIG_X86_MCE_INTEL is not set
