--- a/chromeos/config/chromeos/base.config
+++ b/chromeos/config/chromeos/base.config
@@ -75,6 +75,7 @@ CONFIG_DEFAULT_HOSTNAME="localhost"
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_DEVTMPFS_SAFE=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_FLAKEY=m
 CONFIG_DM_INIT=y
